--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
 Nnamdi Anyanwu <blueking189@gmail.com>
+Simret Kassahun <simruineb@gmail.com>
